--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,10 @@
     position: absolute;
     bottom: 0;
 }
+.magicalBody.preferences .preferenceList{
+    overflow: auto;
+    height: 473px;
+}
 .magicalBody .icon-wrapper {
     font-size: 24px;
     line-height: 0.5;
@@ -181,6 +185,9 @@
     .magicalBody.itemEdit .textArea {
         height: 106px;
     }
+    .magicalBody.preferences .preferenceList{
+        height: 383px
+    }
 }
 @media (min-width: 768px) and (max-width: 991px) {
     .magicalBody.itemDetails .textArea {
@@ -194,5 +201,8 @@
     }
     .magicalBody .listScrollContainer {
         max-height: 400px;
+    }
+    .magicalBody.preferences .preferenceList{
+        height: 263px
     }
 }
