--- a/css/main.css
+++ b/css/main.css
@@ -167,12 +167,45 @@
     overflow-y: auto;
     max-height: 600px;
 }
+.magicalBody.landingPage .landing-block{
+    width: 100%;
+}
+.magicalBody.landingPage .btn span {
+    top: 0px;
+}
+.magicalBody.landingPage h1{
+    font-size: 72px;
+}
+.magicalBody.landingPage .follower-block {
+    border: 1px solid darkgray;
+    border-bottom: none;
+    font-size: 24px;
+    font-weight: 400;
+    display: inline-flex;
+    line-height: 48px;
+}
+.magicalBody.landingPage .follower-block span{
+    padding-left: 20px;
+}
+.magicalBody.landingPage .follower-block:last-child {
+    border-bottom: 1px solid darkgray;
+}
+.magicalBody.landingPage .button-container {
+    text-align: right;
+}
 @media (min-width: 1200px) {
     .magicalBody.itemDetails .textArea {
         height: 486px;
     }
     .magicalBody.itemEdit .textArea {
         height: 196px;
+    }
+    .magicalBody.landingPage .follower-block {
+        border-bottom: 1px solid darkgray;
+        border-right: none;
+    }
+    .magicalBody.landingPage .follower-block:last-child {
+        border-right: 1px solid darkgray;
     }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -187,6 +220,13 @@
     }
     .magicalBody.preferences .preferenceList{
         height: 383px
+    }
+    .magicalBody.landingPage .follower-block {
+        border-bottom: 1px solid darkgray;
+        border-right: none;
+    }
+    .magicalBody.landingPage .follower-block:last-child {
+        border-right: 1px solid darkgray;
     }
 }
 @media (min-width: 768px) and (max-width: 991px) {
@@ -204,5 +244,21 @@
     }
     .magicalBody.preferences .preferenceList{
         height: 263px
+    }
+    .magicalBody.landingPage .follower-block:nth-child(1) {
+        border-bottom: none;
+        border-right: none;
+    }
+    .magicalBody.landingPage .follower-block:nth-child(2) {
+        border-right: 1px solid darkgray;
+        border-bottom: none;
+    }
+    .magicalBody.landingPage .follower-block:nth-child(3) {
+        border-bottom: 1px solid darkgray;
+        border-right: none;
+    }
+    .magicalBody.landingPage .follower-block:nth-child(4) {
+        border-right: 1px solid darkgray;
+        border-bottom: 1px solid darkgray;
     }
 }
